Added cookie history

--- a/cookie-recipe.html
+++ b/cookie-recipe.html
@@ -37,6 +37,7 @@
     </ol>
   <h3> The history of cookies 
   </h3>
+  <p> Most people don't know the complicated past of the cookie. </p>
   <p><a href="http://allrecipes.com">Click here</a> to check out my other great recipes.</p>
 </html>
 </body>
